syntax = "proto3";
option java_multiple_files = true;
package io.datadynamics.template.grpc;

message HelloRequest {
  string firstName = 1;
  string lastName = 2;
}

message HelloResponse {
  string greeting = 1;
}
message HelloRequestMap {
  map<string, string> args = 1;
}

message HelloResponseMap {
  map<string, string> result = 1;
}

service HelloService {
  rpc hello(HelloRequest) returns (HelloResponse);
  rpc helloMap(HelloRequestMap) returns (HelloResponseMap);
}